--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.5.5",
+    "@react-native-material/core": "^1.3.7",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "lodash.throttle": "^4.1.1",
+    "lucide-react-native": "^0.475.0",
     "react": "18.3.1",
-    "react-native": "0.77.0"
+    "react-native": "0.77.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-track-player": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -25,9 +33,12 @@
     "@react-native/metro-config": "0.77.0",
     "@react-native/typescript-config": "0.77.0",
     "@types/jest": "^29.5.13",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "eslint": "^8.19.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-native": "^5.0.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
