--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-svg": "^15.11.1",
+    "react-native-toast-message": "^2.2.1",
     "react-native-track-player": "^4.1.1"
   },
   "devDependencies": {
